Still working on it

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="theCalculator">
         <div class="input">
             <form>
-                <input type="text" id="sum"name="answer"><br>
-                <button type="button" id="plus">+</button>
+                <input type="textbox" id="answer" name="answer"><br>
+                <button class="buttons" type="button" id="plus">+</button>
                 <input type="text" id="input" name="number">
-                <button type="button" id="minus">-</button>
+                <button class="buttons" type="button" id="minus">-</button>
                 
             </form>
         </div>
