--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="theCalculator">
         <div class="input">
             <form>
-                <input type="textbox" id="answer" name="answer"><br>
+                <h2 id="answer">0</h2>
                 <button class="buttons" type="button" id="plus">+</button>
-                <input type="text" id="input" name="number">
+                <input type="number" id="input" name="number" value=1>
                 <button class="buttons" type="button" id="minus">-</button>
                 
             </form>
